# base58-php-ext

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  CREDITS  LICENSE  README.md  appveyor.yml  base58.c  base58.php  config.m4  config.w32  package.xml  php.ini  php_base58.h  test.php
.appveyor/: build.cmd  build_task.cmd  install.cmd  test.cmd
.ci/: appveyor.psm1
autoconf/: php-executable.m4
lib/: libbase58.c
tests/: base58_decode.phpt  base58_encode.phpt
